--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ img {
 .data {
   width: 90%;
   text-align: left;
+  margin: 10px 0px;
 }
 
 .heading1 {
@@ -47,6 +48,7 @@ img {
 
 .text1 {
   font-family: 'Outfit', sans-serif;
+  margin: 10px 0px;
 }
 
 .box {
@@ -58,6 +60,7 @@ img {
 li {
   font-family: 'Outfit', sans-serif;
   margin: 10px;
+  margin: 10px 0px;
 }
 
 .heading2 {
